# SFML_Pong

./: Ball.cpp  Ball.h  CMakeLists.txt  GameLogic.cpp  GameLogic.h  Menu.cpp  Menu.h  Player.cpp  Player.h  Pong.cpp  Pong.h  main.cpp
Collision/: Collidable.h  Collision.cpp  Collision.h
Components/: Component.h
Components/Ball/: Ball.cpp  Ball.h  BallController.cpp  BallController.h  BallModel.cpp  BallModel.h  BallView.cpp  BallView.h
Components/Paddle/: Paddle.cpp  Paddle.h
Components/Platform/: Platform.cpp  Platform.h  PlatformController.cpp  PlatformController.h  PlatformModel.cpp  PlatformModel.h  PlatformView.cpp  PlatformView.h
Components/Player/: Player.cpp  Player.h  PlayerControls.h
Components/Wall/: Wall.cpp  Wall.h
States/: MainGameState.cpp  MainGameState.h  MenuState.cpp  MenuState.h  State.h  StateManager.cpp  StateManager.h
